--- a/tabelas.html
+++ b/tabelas.html
@@ -8,7 +8,7 @@
 <body>
     <main>
         <h1>DCC202 - Atividade 4 - Tabelas: Deyvison Gregorio Dias</h1>
-        <p>Esta é a página sobre tabelas. Temos também a página sobre <a href="listas.html">listas</a> e a página <a href="index.html">página principal</a></p>
+        <p>Esta é a página sobre tabelas. Temos também a página sobre <a href="listas.html">listas</a> e a <a href="index.html">página principal</a></p>
     </main>
 </body>
 </html>
